--- a/main.css
+++ b/main.css
@@ -1,20 +1,20 @@
-body {
-    font-family: 'Karla', Arial, Helvetica, sans-serif;
-    background: rgb(242, 241, 232);
-}
-
-html {
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
-}
-
 *,
 *::before,
 *::after {
     -webkit-box-sizing: inherit;
-        -moz-box-sizing: inherit;
-            box-sizing: inherit;
+    -moz-box-sizing: inherit;
+    box-sizing: inherit;
+}
+
+html {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Karla', Arial, Helvetica, sans-serif;
+    background: rgb(242, 241, 232);
 }
 
 header {
@@ -201,6 +201,10 @@ header {
     border-radius: 8px;
     width: 100%;
     border: 1px solid lightgray;
+}
+
+.prev-section-btn {
+    display: none;
 }
 
 /* MEDIA QURIES */
