--- a/main.css
+++ b/main.css
@@ -202,6 +202,11 @@ header {
     border: 1px solid lightgray;
 }
 
+footer .page-max-width p {
+    text-align: center;
+    font-size: 0.875rem;
+}
+
 /* MEDIA QURIES */
 
 
