--- a/main.css
+++ b/main.css
@@ -15,6 +15,7 @@ html {
 body {
     font-family: 'Karla', Arial, Helvetica, sans-serif;
     background: rgb(242, 241, 232);
+    color: #141413;
 }
 
 header {
@@ -28,8 +29,22 @@ header {
     padding: 0.8rem 0;
 }
 
+.page-wrapper {
+    min-height: 100vh;
+    position: relative;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+}
+
 .logo-container {
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .logo-container svg{
@@ -39,7 +54,8 @@ header {
 
 .page-container {
     width: 100%;
-    padding-top: 2rem;
+    padding-top: 2rem;;
+    padding-bottom: 2.5rem;
 }
 
 .page-container h1 {
@@ -124,13 +140,6 @@ header {
     width: 100%;
 }
 
-.page-form .submit-btn {
-    display: none;
-}
-
-.page-form .submit-btn.is-visible {
-    display: block;
-}
 
 .page-form button[disabled] {
     background: lightgray;
@@ -150,7 +159,7 @@ header {
 }
 
 .form-sum-result {
-    margin-bottom: 0.8rem;
+    display: none;
 }
 
 .success-container {
@@ -176,18 +185,34 @@ header {
 
 .success-container.is-active {
     background: rgba(242, 241, 232);
-    /* background-color: green; */
     padding: 0.8rem;
     display: flex;
 }
 
-.section-eat {
-    opacity: 1;
-    transition: opacity 0.35s ease-out;
+.is-hidden {
+    display: none;
 }
 
-.section-eat.is-active {
-    opacity: 0;
+.page-form .questions-section {
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+}
+
+.section-header {
+    background: rgb(147, 188, 54);
+    border-top-right-radius: 0.5rem;
+    border-top-left-radius: 0.5rem;
+}
+
+.section-header h2 {
+    margin: 20px 0 0 0;
+    padding: 1.25rem 1.25rem;
+    font-size: 1.25rem;
+    font-weight: 600;
+}
+
+.section-header:first-child h2 {
+    margin-top: 40px 0 0 0;
 }
 
 .section-btns-wrapper {
@@ -209,10 +234,31 @@ footer .page-max-width p {
 
 /* MEDIA QURIES */
 
-
 /* Mobile */
 @media screen and (max-width: 568px) {
     .page-container {
-        padding: 20px 20px 0 20px;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+    }
+
+    .logo-container svg {
+        max-width: 40px;
+    }
+
+    .header-container {
+        padding: 0.5rem 0;
+    }
+
+    .page-form fieldset {
+        padding: 1.25rem;
+    }
+
+    .page-container h1 {
+        font-size: 1.3rem;
+    }
+
+    .section-header h2 {
+        padding: 1rem 1.2rem;
+        font-size: 1.2rem;
     }
 }
