--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-    font-family: 'Karla', Arial, Helvetica, sans-serif;
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
     background: rgb(242, 241, 232);
     color: #141413;
 }
@@ -24,9 +24,21 @@ header {
 }
 
 .header-container {
-    max-width: 60rem;
+    max-width: 35rem;
     margin: 0 auto;
     padding: 0.8rem 0;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.header-container nav ul {
+    text-align: right;
+}
+
+.header-container nav ul li {
+    list-style-type: none;
+    cursor: pointer;
 }
 
 .page-wrapper {
@@ -65,7 +77,7 @@ header {
 }
 
 .page-max-width {
-    max-width: 30rem;
+    max-width: 35rem;
     width: 100%;
     margin: 0 auto;
 }
@@ -92,6 +104,7 @@ header {
 
 .page-form fieldset label {
     margin-bottom: 20px;
+    cursor: pointer;
 }
 
 .page-form fieldset.contact-info input {
@@ -123,6 +136,8 @@ header {
 .page-form fieldset.questions [type="radio"] {
     margin-right: 8px;
     cursor: pointer;
+    width: 0.95rem;
+    height: 0.95rem;
 }
 
 .page-form button {
@@ -136,8 +151,6 @@ header {
     font-size: 1rem;
     height: 40px;
     cursor: pointer;
-    max-width: 130px;
-    width: 100%;
 }
 
 
@@ -158,9 +171,9 @@ header {
     margin-top: 10px;
 }
 
-.form-sum-result {
+/* .form-sum-result {
     display: none;
-}
+} */
 
 .success-container {
     height: 100%;
@@ -189,17 +202,13 @@ header {
     display: flex;
 }
 
-.is-hidden {
-    display: none;
-}
-
 .page-form .questions-section {
     border-top-right-radius: 0;
     border-top-left-radius: 0;
 }
 
 .section-header {
-    background: rgb(147, 188, 54);
+    background: #93c47d;
     border-top-right-radius: 0.5rem;
     border-top-left-radius: 0.5rem;
 }
@@ -209,10 +218,6 @@ header {
     padding: 1.25rem 1.25rem;
     font-size: 1.25rem;
     font-weight: 600;
-}
-
-.section-header:first-child h2 {
-    margin-top: 40px 0 0 0;
 }
 
 .section-btns-wrapper {
@@ -232,7 +237,87 @@ footer .page-max-width p {
     font-size: 0.875rem;
 }
 
-/* MEDIA QURIES */
+/* Table results */
+#customer-name {
+    text-align: center;
+    font-size: 1.2rem;
+}
+
+.table-container:not(:last-child) {
+    margin-bottom: 2rem;
+}
+
+.table-wrapper h2 {
+    margin-top: 0;
+    background: lightblue;
+    border-top-right-radius: 0.5rem;
+    border-top-left-radius: 0.5rem;
+}
+
+.table-wrapper {
+    background: white;
+    border: 1px solid lightgray;
+    border-radius: 0.5rem;
+}
+
+.table-results-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.table-red {
+    background: #cc4125;
+    border-bottom-left-radius: 0.5rem;
+    border-top-left-radius: 0.5rem;
+}
+
+.table-yellow {
+    background: #ffe598;
+}
+
+.table-green {
+    background: #93c47d;
+    border-bottom-right-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+}
+
+.table-results-container {
+    padding: 1.25rem;
+    border-bottom-right-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
+}
+
+.table-results-wrapper .table-box svg {
+    margin: 0.9rem 0;
+    height: 65px;
+}
+
+.table-box {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 1rem 0;
+}
+
+.table-box .table-th {
+    font-size: 1rem;
+    font-weight: 600;
+    margin-bottom: 0.8rem;
+}
+
+.table-numbers {
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+/* OTHER */
+.is-hidden {
+    display: none;
+}
+
+
+/*** MEDIA QURIES ***/
 
 /* Mobile */
 @media screen and (max-width: 568px) {
