--- a/main.css
+++ b/main.css
@@ -32,6 +32,11 @@ header {
     grid-template-columns: 1fr 1fr 1fr;
 }
 
+.header-container a {
+    display: flex;
+    justify-content: center;
+}
+
 .header-container nav ul {
     text-align: right;
 }
@@ -130,7 +135,7 @@ header {
 
 .page-form fieldset.questions p {
     margin-top: 0;
-    line-height: 1.3;
+    line-height: 1.4;
 }
 
 .page-form fieldset.questions [type="radio"] {
@@ -140,7 +145,7 @@ header {
     height: 0.95rem;
 }
 
-.page-form button {
+.page-form button, .page-form a.next-section-btn {
     border-style: solid;
     border: 2px solid #10584b;
     border-color: #10584b;
@@ -153,6 +158,11 @@ header {
     cursor: pointer;
 }
 
+.page-form a.next-section-btn {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
 
 .page-form button[disabled] {
     background: lightgray;
@@ -169,6 +179,10 @@ header {
     flex-direction: row;
     align-items: center;
     margin-top: 10px;
+}
+
+.questions-box span {
+    /* text-transform: capitalize; */
 }
 
 /* .form-sum-result {
@@ -202,7 +216,7 @@ header {
     display: flex;
 }
 
-.page-form .questions-section {
+.page-form .questions-section{
     border-top-right-radius: 0;
     border-top-left-radius: 0;
 }
@@ -238,7 +252,7 @@ footer .page-max-width p {
 }
 
 /* Table results */
-#customer-name {
+.customer-welcome-txt {
     text-align: center;
     font-size: 1.2rem;
 }
@@ -312,7 +326,7 @@ footer .page-max-width p {
 }
 
 /* OTHER */
-.is-hidden {
+html body main .page-container .is-hidden, .lang-switch .is-hidden {
     display: none;
 }
 
@@ -331,7 +345,7 @@ footer .page-max-width p {
     }
 
     .header-container {
-        padding: 0.5rem 0;
+        padding: 0.5rem 1.5rem
     }
 
     .page-form fieldset {
