--- a/main.css
+++ b/main.css
@@ -58,6 +58,10 @@ header {
     height: 2.5rem;
 }
 
+.footer p {
+    margin: 0;
+}
+
 .logo-container {
     display: flex;
     align-items: center;
